--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -49,7 +49,7 @@
   .action-dir { font-size: 11px; font-weight: 600; padding: 2px 8px; border-radius: 6px; white-space: nowrap; width: 80px; text-align: center; flex-shrink: 0; }
   .action-dir.up { background: rgba(34,197,94,0.15); color: var(--green); }
   .action-dir.down { background: rgba(239,68,68,0.15); color: var(--red); }
-  .action-price { font-weight: 600; font-size: 15px; width: 90px; text-align: right; flex-shrink: 0; }
+  .action-price { font-weight: 600; font-size: 15px; width: 90px; text-align: left; flex-shrink: 0; }
   .action-detail { color: var(--muted); font-size: 11px; flex: 1; text-align: right; }
   .order-row { display: flex; justify-content: space-between; align-items: center; padding: 5px 0; border-bottom: 1px solid var(--border); font-size: 12px; }
   .order-row:last-child { border: none; }
