--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -44,13 +44,14 @@
   .purple { color: var(--purple); }
   .section { background: var(--card); border-radius: 10px; padding: 12px; border: 1px solid var(--border); margin-bottom: 12px; }
   .section h3 { font-size: 12px; text-transform: uppercase; letter-spacing: 0.8px; color: var(--muted); margin-bottom: 8px; }
-  .action-row { display: flex; align-items: center; padding: 6px 0; border-bottom: 1px solid var(--border); gap: 8px; }
+  .actions-container { display: flex; flex-direction: column; align-items: center; }
+  .action-row { display: flex; align-items: center; padding: 6px 0; border-bottom: 1px solid var(--border); gap: 10px; width: fit-content; }
   .action-row:last-child { border: none; }
   .action-dir { font-size: 11px; font-weight: 600; padding: 2px 8px; border-radius: 6px; white-space: nowrap; width: 80px; text-align: center; flex-shrink: 0; }
   .action-dir.up { background: rgba(34,197,94,0.15); color: var(--green); }
   .action-dir.down { background: rgba(239,68,68,0.15); color: var(--red); }
   .action-price { font-weight: 600; font-size: 15px; width: 90px; text-align: left; flex-shrink: 0; }
-  .action-detail { color: var(--muted); font-size: 11px; flex: 1; text-align: right; }
+  .action-detail { color: var(--muted); font-size: 11px; width: 50px; text-align: right; flex-shrink: 0; }
   .order-row { display: flex; justify-content: space-between; align-items: center; padding: 5px 0; border-bottom: 1px solid var(--border); font-size: 12px; }
   .order-row:last-child { border: none; }
   .hf-bar { height: 6px; border-radius: 3px; background: var(--border); margin-top: 6px; overflow: hidden; }
@@ -267,6 +268,7 @@ function render(d) {
     
     <div class="section">
       <h3>🎯 Prochaines actions</h3>
+      <div class="actions-container">
       ${d.nextUp ? `<div class="action-row">
         <div><span class="action-dir up">▲ HAUSSE</span></div>
         <div class="action-price">${fmtUSD(d.nextUp.lo)}</div>
@@ -277,6 +279,7 @@ function render(d) {
         <div class="action-price">${fmtUSD(d.nextDown.prix)}</div>
         <div class="action-detail">Step ${d.nextDown.step}</div>
       </div>` : ''}
+      </div>
     </div>
     
     <div class="footer">
