--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -44,8 +44,7 @@
   .purple { color: var(--purple); }
   .section { background: var(--card); border-radius: 10px; padding: 12px; border: 1px solid var(--border); margin-bottom: 12px; }
   .section h3 { font-size: 12px; text-transform: uppercase; letter-spacing: 0.8px; color: var(--muted); margin-bottom: 8px; }
-  .actions-container { display: flex; flex-direction: column; align-items: center; }
-  .action-row { display: flex; align-items: center; padding: 6px 0; border-bottom: 1px solid var(--border); gap: 10px; width: fit-content; }
+  .action-row { display: flex; align-items: center; padding: 6px 0; border-bottom: 1px solid var(--border); gap: 10px; }
   .action-row:last-child { border: none; }
   .action-dir { font-size: 11px; font-weight: 600; padding: 2px 8px; border-radius: 6px; white-space: nowrap; width: 80px; text-align: center; flex-shrink: 0; }
   .action-dir.up { background: rgba(34,197,94,0.15); color: var(--green); }
@@ -268,7 +267,6 @@ function render(d) {
     
     <div class="section">
       <h3>🎯 Prochaines actions</h3>
-      <div class="actions-container">
       ${d.nextUp ? `<div class="action-row">
         <div><span class="action-dir up">▲ HAUSSE</span></div>
         <div class="action-price">${fmtUSD(d.nextUp.lo)}</div>
@@ -279,7 +277,6 @@ function render(d) {
         <div class="action-price">${fmtUSD(d.nextDown.prix)}</div>
         <div class="action-detail">Step ${d.nextDown.step}</div>
       </div>` : ''}
-      </div>
     </div>
     
     <div class="footer">
