--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -44,12 +44,12 @@
   .purple { color: var(--purple); }
   .section { background: var(--card); border-radius: 10px; padding: 12px; border: 1px solid var(--border); margin-bottom: 12px; }
   .section h3 { font-size: 12px; text-transform: uppercase; letter-spacing: 0.8px; color: var(--muted); margin-bottom: 8px; }
-  .action-row { display: flex; align-items: center; padding: 6px 0; border-bottom: 1px solid var(--border); gap: 10px; }
+  .action-row { display: flex; align-items: center; padding: 6px 0; border-bottom: 1px solid var(--border); }
   .action-row:last-child { border: none; }
   .action-dir { font-size: 11px; font-weight: 600; padding: 2px 8px; border-radius: 6px; white-space: nowrap; width: 80px; text-align: center; flex-shrink: 0; }
   .action-dir.up { background: rgba(34,197,94,0.15); color: var(--green); }
   .action-dir.down { background: rgba(239,68,68,0.15); color: var(--red); }
-  .action-price { font-weight: 600; font-size: 15px; width: 90px; text-align: left; flex-shrink: 0; }
+  .action-price { font-weight: 600; font-size: 15px; flex: 1; text-align: center; }
   .action-detail { color: var(--muted); font-size: 11px; width: 50px; text-align: right; flex-shrink: 0; }
   .order-row { display: flex; justify-content: space-between; align-items: center; padding: 5px 0; border-bottom: 1px solid var(--border); font-size: 12px; }
   .order-row:last-child { border: none; }
