--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -134,6 +134,21 @@ function render(d) {
       </div>
     </div>
     
+    ${d.eth ? `
+    <div style="display:flex;justify-content:space-between;align-items:center;background:var(--card);border:1px solid var(--border);border-radius:10px;padding:10px 14px;margin-bottom:12px">
+      <div style="display:flex;align-items:center;gap:6px">
+        <span style="font-size:14px">⟠</span>
+        <div>
+          <div style="font-size:10px;color:var(--muted);text-transform:uppercase;letter-spacing:0.8px">Solde ETH</div>
+          <div style="font-weight:700;font-size:15px">${d.eth.ethBalance.toFixed(4)} ETH</div>
+        </div>
+      </div>
+      <div style="text-align:right">
+        <div style="font-size:10px;color:var(--muted);text-transform:uppercase;letter-spacing:0.8px">Gas (swap)</div>
+        <div style="font-weight:700;font-size:15px">${d.eth.gasPriceGwei} gwei <span style="color:var(--muted);font-size:12px;font-weight:400">≈ ${d.eth.swapCostETH.toFixed(4)} ETH</span></div>
+      </div>
+    </div>
+    ` : ''}
     <div class="chart-wrap"><canvas id="chart"></canvas></div>
     
     ${a ? `
