rebrand: BTSAVE + logo integration in dashboard header

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>Quiet Storm</title>
+<title>BTSAVE</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@3.0.1/dist/chartjs-plugin-annotation.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-financial@0.2.1/dist/chartjs-chart-financial.min.js"></script>
@@ -108,9 +108,9 @@ function render(d) {
     <div class="header">
       <div class="header-top">
         <div style="display:flex;align-items:center;gap:10px">
-          <div style="width:36px;height:36px;border-radius:50%;background:linear-gradient(135deg, var(--accent), var(--purple));display:flex;align-items:center;justify-content:center;font-size:18px;box-shadow:0 2px 12px rgba(168,85,247,0.3)">🌀</div>
+          <img src="logo.jpg" alt="BTSAVE" style="height:32px;border-radius:6px">
           <div>
-            <h1 style="font-size:18px;line-height:1.1"><span>Quiet</span> Storm</h1>
+            <h1 style="font-size:18px;line-height:1.1"><span>BT$AVE</span></h1>
             <div style="font-size:10px;color:var(--muted);letter-spacing:1.5px;text-transform:uppercase">BTC Hedge System</div>
           </div>
         </div>
@@ -302,7 +302,7 @@ function render(d) {
     
     <div class="footer">
       <span class="live-dot"></span> Mis à jour: ${new Date().toLocaleString('fr-FR')} — Auto-refresh 60s<br>
-      🌀 Quiet Storm — On-chain data via Ethereum RPC
+      BTSAVE — On-chain data via Ethereum RPC
     </div>
   `;
   
