BTSAVE logo: transparent PNG, proper dark theme integration

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -107,12 +107,8 @@ function render(d) {
   $('#app').innerHTML = `
     <div class="header">
       <div class="header-top">
-        <div style="display:flex;align-items:center;gap:10px">
-          <img src="logo.jpg" alt="BTSAVE" style="height:32px;border-radius:6px">
-          <div>
-            <h1 style="font-size:18px;line-height:1.1"><span>BT$AVE</span></h1>
-            <div style="font-size:10px;color:var(--muted);letter-spacing:1.5px;text-transform:uppercase">BTC Hedge System</div>
-          </div>
+        <div>
+          <img src="logo.png" alt="BTSAVE" style="height:30px;filter:invert(0.85) brightness(1.5)">
         </div>
         <div style="text-align:right">
           <div class="step-badge">Step ${d.currentStep}/19</div>
