style: green dollar color on step metrics + connect wallet button

--- a/landing/index.html
+++ b/landing/index.html
@@ -36,7 +36,7 @@
     top: 14px;
     right: 14px;
     z-index: 10;
-    background: linear-gradient(135deg, #e88a1a 0%, #d46800 100%);
+    background: linear-gradient(135deg, #2e8b3a 0%, #1a6b28 100%);
     color: #fff;
     border: none;
     border-radius: 10px;
@@ -50,12 +50,12 @@
     align-items: center;
     gap: 6px;
     transition: all 0.2s;
-    box-shadow: 0 2px 12px rgba(232,138,26,0.35);
+    box-shadow: 0 2px 12px rgba(46,139,58,0.35);
   }
   .connect-btn:hover {
     transform: translateY(-1px);
-    box-shadow: 0 4px 20px rgba(232,138,26,0.5);
-    background: linear-gradient(135deg, #f09a2a 0%, #e07800 100%);
+    box-shadow: 0 4px 20px rgba(46,139,58,0.5);
+    background: linear-gradient(135deg, #3a9e48 0%, #228832 100%);
   }
   .connect-btn svg { width: 14px; height: 14px; }
 
@@ -158,11 +158,11 @@
   <!-- Metrics bar: 6 metrics -->
   <div class="metrics">
     <div class="metric" data-metric="current-step">
-      <div class="metric-value" id="currentStep">3</div>
+      <div class="metric-value" id="currentStep" style="color:#3aae4a">3</div>
       <div class="metric-label">Current Step</div>
     </div>
     <div class="metric" data-metric="total-steps">
-      <div class="metric-value" id="totalSteps">12</div>
+      <div class="metric-value" id="totalSteps" style="color:#3aae4a">12</div>
       <div class="metric-label">Steps Hit</div>
     </div>
     <div class="metric" data-metric="tvl">
